FEAT: Migracion estructura DDD
